--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 project(feature_extraction)
 
+# ============================================================
+# release
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
@@ -12,6 +14,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall   -O3")
 set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -march=native")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -march=native")
 
+# ============================================================
+# find packages
 find_package(OpenCV REQUIRED)
 find_package(CUDA REQUIRED)
 find_package(yaml-cpp REQUIRED)
@@ -27,6 +31,8 @@ find_path(CUDA_LIBRARY_DIR libcudart.so
 message(STATUS "  include path: ${CUDA_INCLUDE_DIR}")
 message(STATUS "  library path: ${CUDA_LIBRARY_DIR}")
 
+# ============================================================
+# find tensorrt
 find_path(TENSORRT_INCLUDE_DIR NvInfer.h
   HINTS ${TENSORRT_ROOT} ${CUDA_TOOLKIT_ROOT_DIR}
   PATH_SUFFIXES include)
@@ -50,12 +56,17 @@ set(TENSORRT_LIBRARY ${TENSORRT_LIBRARY_INFER}
                      ${TENSORRT_LIBRARY_INFER_PLUGIN}
                      ${TENSORRT_LIBRARY_ONNXPARSER})
 
+# ============================================================
+# include 
 include_directories(${OpenCV_INCLUDE_DIRS}
   ${CUDA_INCLUDE_DIR} ${TENSORRT_INCLUDE_DIR} 
   ${YAML_CPP_INCLUDE_DIR} ${GFLAGS_INCLUDE_DIR} 
   ${PROJECT_SOURCE_DIR}/common
   ${PROJECT_SOURCE_DIR}/include
   ${PROJECT_SOURCE_DIR}/include/models)
+
+# ============================================================
+# executable 
 
 add_executable(
   inference 
@@ -67,9 +78,20 @@ add_executable(
   src/models/instance_seg.cpp
   src/models/feature_extraction.cpp
   src/models/mono_depth.cpp
+  src/models/yolov5.cpp
   common/logger.cpp 
 )
 
 target_link_libraries(inference ${OpenCV_LIBS}
   ${CUDA_LIBRARIES} ${TENSORRT_LIBRARY} yaml-cpp gflags )
 
+
+add_executable(
+  test_preprocess 
+  test/test_preprocess.cpp 
+  src/preprocess.cpp 
+  src/stereo_camera.cpp
+)
+
+target_link_libraries(test_preprocess ${OpenCV_LIBS}
+  ${CUDA_LIBRARIES} ${TENSORRT_LIBRARY} yaml-cpp gflags )
